ci: add workflow_dispatch to go-version action

--- a/.github/workflows/go-version.yml
+++ b/.github/workflows/go-version.yml
@@ -2,6 +2,7 @@ name: 'go-version'
 on:
   schedule:
     - cron: '0 17 * * *'
+  workflow_dispatch:
 jobs:
   go-version:
     runs-on: 'ubuntu-latest'
