--- a/.github/workflows/go-version.yml
+++ b/.github/workflows/go-version.yml
@@ -25,6 +25,7 @@ jobs:
             git add .
             c="chore: bump Go version to ${v1}"
             git commit -m "${c}"
+            git push --set-upstream origin "${b}"
             gh pr create --title "${c}" \
               --body 'TODO: update `packages.go.src.hash` and run `nix flake update`' \
               --head "${b}"
