--- a/.github/workflows/go-version.yml
+++ b/.github/workflows/go-version.yml
@@ -12,20 +12,21 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
+          set -eux
           v1="$(curl -s 'https://go.dev/dl/?mode=json' | jq -r '.[].version' | sort -r | head -n 1 | tr -d '[:alpha:]')"
           v2="$(grep 'version =' flake.nix | cut -d '"' -f2)"
           if [[ "${v1}" != "${v2}" ]]; then
             sed -i "s/version = \"${v2}\"/version = \"${v1}\"/" flake.nix
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git config --global user.name "github-actions[bot]"
-            b="chore/go${v1}"
-            git switch -c "${b}"
+            branch="chore/go${v1}"
+            git switch --create "${branch}"
             git add .
-            c="chore: bump Go version to ${v1}"
-            git commit -m "${c}"
-            git push --set-upstream origin "${b}"
+            commit="chore: bump Go version to ${v1}"
+            git commit -m "${commit}"
+            git push --set-upstream origin "${branch}"
             gh pr create --assignee matthewdargan \
-              --title "${c}" \
+              --title "${commit}" \
               --body 'TODO: update `packages.go.src.hash` and run `nix flake update`' \
-              --head "${b}"
+              --head "${branch}"
           fi
