ci: create pull request if Go versions differ (#5)
* ci: create pull request if Go versions differ

* ci: add GH_TOKEN

* ci: add gh pr body

* ci: add git commit

* ci: set git email and name

* ci: use current branch for pr

* ci: git push

* ci: add assignee

* ci: remove debug prints

* ci: set -eux

--- a/.github/workflows/go-version.yml
+++ b/.github/workflows/go-version.yml
@@ -9,11 +9,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: 'compare Go versions'
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
+          set -eux
           v1="$(curl -s 'https://go.dev/dl/?mode=json' | jq -r '.[].version' | sort -r | head -n 1 | tr -d '[:alpha:]')"
           v2="$(grep 'version =' flake.nix | cut -d '"' -f2)"
-          echo "v1: ${v1}"
-          echo "v2: ${v2}"
           if [[ "${v1}" != "${v2}" ]]; then
-            echo 'Go versions are not equal.'
+            sed -i "s/version = \"${v2}\"/version = \"${v1}\"/" flake.nix
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
+            git config --global user.name "github-actions[bot]"
+            branch="chore/go${v1}"
+            git switch --create "${branch}"
+            git add .
+            commit="chore: bump Go version to ${v1}"
+            git commit -m "${commit}"
+            git push --set-upstream origin "${branch}"
+            gh pr create --assignee matthewdargan \
+              --title "${commit}" \
+              --body 'TODO: update `packages.go.src.hash` and run `nix flake update`' \
+              --head "${branch}"
           fi
