--- a/.github/workflows/go-version.yml
+++ b/.github/workflows/go-version.yml
@@ -22,7 +22,7 @@ jobs:
 
           nix flake update
           sed -i "s/version = \"${v2}\"/version = \"${v1}\"/" flake.nix
-          nix_build_output="$(nix build .#go 2>&1)"
+          nix_build_output="$(nix build .#go 2>&1 || true)"
           if [[ "${nix_build_output}" =~ got:[[:space:]]+sha256-([a-zA-Z0-9=]+) ]]; then
             hash="${BASH_REMATCH[1]}"
             sed -i "s/hash = \".*\"/hash = \"${hash}\"/" flake.nix
